# brain-agriculture

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: django.yml
src/: .env.example  manage.py
src/agriculture_api/: admin.py  apps.py  docs.py  managers.py  middlewares.py  models.py  serializers.py  urls.py  validators.py  views.py
src/agriculture_api/migrations/: 0001_initial.py  0002_alter_farmer_document_alter_harvest_year.py  0003_alter_cultivatedcrop_options_and_more.py  0004_alter_cultivatedcrop_unique_together_and_more.py  0005_alter_harvest_year.py
src/agriculture_api/tests/: conftest.py  test_dashboard_api.py  test_farmers_api.py  test_properties_api.py  test_validators.py
src/agriculture_api/tests/fixtures/: invalid_areas.csv  invalid_cnpjs.csv  invalid_cpfs.csv  valid_areas.csv  valid_cnpjs.csv  valid_cpfs.csv
src/brain_agriculture_extractta/: asgi.py  settings.py  urls.py  wsgi.py
