[project]
name = "brain-agriculture"
version = "0.1.0"
description = ""
authors = [
    {name = "Jailton Silva",email = "jss1@ifal.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "brain_agriculture_extractta", from = "src"}]


[tool.poetry.group.dev.dependencies]
django-extensions = "^4.1"
ipython = "^9.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
